[package]
name = "batgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
confy = "0.5.1"
dotenv = "0.15.0"
openai = "1.0.0-alpha.8"
reqwest = { version = "0.11.15", features = ["cookies"] }
scraper = "0.15.0"
serde = "1.0.159"
tokio = { version = "1.26.0", features = ["full"] }
